fixed spacing on circles and 'The Last Container.'

--- a/style.css
+++ b/style.css
@@ -134,7 +134,50 @@ h6{
 }
 /*THE LAST CONTAINER*/
 .col-5 .container .row img{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border: 6px solid #e6e6e6;
+    padding-right: 0;
 }
+.container .row h4{
+    font-family: "Anton";
+    padding-left: 0;
+    font-size: 1.7em;
+}
+.the-last-container .row{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+hr{
+    margin-bottom: 45px;
+}
+.col-6 .container .row .small-red-circle{
+    padding: 10px;
+}
+.col-6 .container .row .small-orange-circle{
+    padding: 10px;
+}
+.col-6 .container .row .small-green-circle{
+    padding: 10px;
+}
+.col-6 .container .row .small-blue-circle{
+    padding: 10px;
+}
+.small-orange-circle{
+    border;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
